PROJECT (uwrapc)

IF(QT_UIC_EXECUTABLE)
  MESSAGE("UIC found")
ELSE(QT_UIC_EXECUTABLE)
  MESSAGE("UIC NOT! found")
ENDIF(QT_UIC_EXECUTABLE)

INCLUDE_DIRECTORIES(${LOCAL_INCLUDE}/Preview)
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} )
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
QT4_WRAP_UI(PREV_UI_FILES preview.ui)
QT4_WRAP_CPP(PREV_MOC_FILES ${LOCAL_INCLUDE}/Preview/preview.h)
INCLUDE_DIRECTORIES(${PREV_UI_FILES})
#QT4_ADD_RESOURCES(HAWK_QRC_FILES Hawk.qrc)

LIST(APPEND PREV_OBJ main.cpp preview.cpp ${PREV_MOC_FILES} )

ADD_EXECUTABLE(Preview ${PREV_OBJ})

TARGET_LINK_LIBRARIES(Preview ${LIBRARY_LIST})

INSTALL(TARGETS Preview
            RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
            LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
            ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
