project(uwrapc)
if(GSL_FOUND)

INCLUDE_DIRECTORIES(${GSL_INCLUDES})

ADD_EXECUTABLE(gtm gtm.c)

LIST(APPEND LIBRARY_LIST ${GSL_LIBRARIES})

TARGET_LINK_LIBRARIES(gtm ${LIBRARY_LIST} -lcblas)

INSTALL(TARGETS gtm
	       RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
	       LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
	       ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

endif(GSL_FOUND)
